@@ -170,3 +170,8 @@ unshare容器和rootless容器会始终在执行命令前fork()自身一次，
 -W, --work-dir ..............................: 更改容器中的工作目录，默认是/
 ```
 出于兼容性考虑，增加此选项。
+****************
+```
+-A, --unmask-dirs ...........................: 不保护/proc和/sys中的目录
+```
+默认情况下，ruri将会遮盖/proc和/sys下的敏感位置，使用此选项取消此行为。
